src/core/generator/json/snapshots/tailcall__core__generator__json__field_base_url_generator__test__should_add_base_url_if_not_present.snap
---
source: src/core/generator/json/field_base_url_generator.rs
expression: config.to_sdl()
---
type Query {
  f1: Int @http(url: "https://calender.com/api/v1/day")
  f2: String @http(url: "http://localhost/month")
  f3: String
}
